WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171849
[AppleWin] CaptureDeviceManager.cpp: error C2813: #import is not supported with /MP
https://bugs.webkit.org/show_bug.cgi?id=171849
Summary
[AppleWin] CaptureDeviceManager.cpp: error C2813: #import is not supported wi...
Fujii Hironori
Reported
2017-05-08 23:42:35 PDT
[AppleWin] CaptureDeviceManager.cpp: error C2813: #import is not supported with /MP AppleWin port build has been broken since
Bug 171824
.
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/1322/steps/compile-webkit/logs/stdio
> C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform\mediastream\CaptureDeviceManager.cpp(26): error C2813: #import is not supported with /MP [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] > C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform\mediastream\CaptureDeviceManager.cpp(27): error C2813: #import is not supported with /MP [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj]
Attachments
Patch
(1.83 KB, patch)
2017-05-08 23:50 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-05-08 23:50:12 PDT
Created
attachment 309475
[details]
Patch
Per Arne Vollan
Comment 2
2017-05-08 23:57:03 PDT
Comment on
attachment 309475
[details]
Patch Thanks! R=me.
WebKit Commit Bot
Comment 3
2017-05-09 00:37:06 PDT
Comment on
attachment 309475
[details]
Patch Clearing flags on attachment: 309475 Committed
r216482
: <
http://trac.webkit.org/changeset/216482
>
WebKit Commit Bot
Comment 4
2017-05-09 00:37:08 PDT
All reviewed patches have been landed. Closing bug.
youenn fablet
Comment 5
2017-05-09 08:03:13 PDT
Thanks too!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug