[AppleWin] CaptureDeviceManager.cpp: error C2813: #import is not supported with /MP https://bugs.webkit.org/show_bug.cgi?id=171849

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-05-09
Reviewed by Per Arne Vollan.

* platform/mediastream/CaptureDeviceManager.cpp: Replaced #import with #include.

Canonical link: https://commits.webkit.org/188766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216482 268f45cc-cd09-0410-ab3c-d52691b4dbfc